Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/TargetType57.out
TargetType57.java:14:42: compiler.err.cant.resolve.location.args: kindname.method, nonExistentMethod, , , (compiler.misc.location.1: kindname.variable, s, java.lang.Integer)
1 error
